# preqin_interview_spa

./: README.md
preqin-fastapi/: .gitignore  Dockerfile  README.md  README_DOCKER_RUN.md  main.py  pyproject.toml  run.bat  run.sh
preqin-fastapi/src/handlers/: investor_handler.py
preqin-fastapi/src/models/: firms.py
preqin-fastapi/src/routers/: investors.py
preqin-spa/: package-lock.json  package.json
preqin-spa/public/: index.html
preqin-spa/src/: App.tsx
preqin-spa/src/components/: InvestorDetails.tsx  InvestorTable.tsx
preqin-spa/src/components/ui-common/: CustomSelect.tsx  CustomTable.tsx
preqin-spa/src/services/: api.ts  apiSlice.ts
preqin-spa/src/store/: index.ts  investorsSlice.ts
