[tool.poetry]
name = "preqin"
version = "0.1.0"
description = "Preqin fastapi backend"
authors = ["Umar Basha - Tech Monk <umarbasha007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.27.1"}
pydantic = "2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
